--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,15 @@
   background-color: #242424;
 }
 
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.fade-out {
+  animation: fadeOut 2s ease-out forwards;
+}
